--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,12 @@ a {
   box-sizing: border-box;
 }
 
+@media(max-width: 414px) {
+  .sm-none {
+      display: none;
+  }
+}
+
 
 #header-search {
   display: inline-block; width: 200px; height: 32px;
